1.25 2025-03-16
~~~~~~~~~~~~~~~

* The rebin() operation now takes into account existing weight variables
  and properly handles angle variables. Rebinning the result of a
  bin_spatial() operation to a lower resolution now gives the same result
  as when a spatial bin was performed directly to that lower resolution.

* Added harp_convert_unit_double() and harp_convert_unit_float().
  harp_convert_unit() is now deprecated.

* Performing a unit conversion on single precision floating point
  variables will no longer convert the variable to double precision.

* Updates to product ingestions:
  - GOME2 L2: added support for NHP/OHP ozone profile products and all
    products now use float instead of double for variables.
  - GEOMS FTIR: reinterpret vmr from old GEOMS templates as dry air vmr.
  - EarthCARE L1: add support for L1 ATLID, BBR, and MSI products.
  - EarthCARE L2: all vertical profiles are inverted to make them
    ascending, fixed geoid offset correction, and fixed AM__CTH_2B
    ingestion.
  - S5P PAL L2: added support for Ocean Colour (L2__KD____) product.

1.24 2024-11-11
~~~~~~~~~~~~~~~

* Fixed appending non-float variables with different sub-dimensions when
  using the Python harp.concatenate() function.

* Updates to product ingestions:
  - ESACCI_GHG: fixed incorrect unit for CH4/CO variables
  - GOME-2 L2: added support for O3MARS aerosol layer height and added
    support for O3MARP V5
  - S5P L2: added snow_ice_type/sea_ice_fraction ingestion for AAI/CO/CH4
  - S5P L2 CH4: added 'corrected' option to ingest destriped columns and
    fixed issue in NIR/SWIR selection of surface albedo
  - S5P PAL L2: added support for SRON/SICOR HDO (L2__HDO__S) product

1.23 2024-07-30
~~~~~~~~~~~~~~~

* Fixed numpy 2.x compatibility issues in python interface.

* Added derivations to retrieve dry air mass/volume mixing ratio from H2O
  mass/volume mixing ratio with regard to dry air.

* Fixed some issues with building the HARP R interface extension.
