@@ -189,8 +189,8 @@
 </thead>
 <tbody>
 <tr class="row-even"><td><p>band</p></td>
-<td><p>VNIR, SWIR1, SWIR2, TRI1, TRI2, TRI3</p></td>
-<td><p>band: VIS (default), VNIR (band=VNIR), SWIR1 (band=SWIR1), SWIR2 (band=SWIR2), TRI1 (band=TRI1), TRI2 (band=TRI2), TRI3 (band=TRI3)</p></td>
+<td><p>VNIR, SWIR1, SWIR2, TIR1, TIR2, TIR3</p></td>
+<td><p>band: VIS (default), VNIR (band=VNIR), SWIR1 (band=SWIR1), SWIR2 (band=SWIR2), TIR1 (band=TIR1), TIR2 (band=TIR2), TIR3 (band=TIR3)</p></td>
 </tr>
 </tbody>
 </table>
